wordle/src/AboutUsPage/AboutUsPage.scss
@import "../Utils/include-media.scss";

.about-us-style {
  position: flex;
}

.back-button {
  display: fixed;
  margin-top: 30px;
  margin-left: 30px;
  background-color: transparent;
  border: 0;
  float: left;
}

.card {
  float: right;
  margin: 40px 170px auto auto;
  width: 1518px;
  height: 908px;
  border: 2px solid black;
  background-color: white;
  border-radius: 20px;

  @include media("<lgdesktop") {
    width: 1100px;
    height: 600px;
  }
}

.title {
  text-align: center;
  font-size: 65px;
  @include media("<lgdesktop") {
    font-size: 45px;
    margin-top: 10px;
    margin-bottom: 10px;
  }
}

.text-content {
  max-width: 85%;
  margin: 30px auto 20px auto;
  font-size: 32px;
  @include media("<lgdesktop") {
    font-size: 25px;
    margin-top: 0;
  }
}

.img-wrapper {
  display: flex;
  width: 1233px;
  height: 389px;
  margin-left: auto;
  margin-right: auto;
  @include media("<=lgdesktop") {
    margin-left: 120px;
  }
}

.ken-img {
  height: 327px;
  width: 327px;
  @include media("<=lgdesktop") {
    height: 180px;
    width: 180px;
  }
}

.team-img {
  height: 180px;
  width: 500px;
}

.ken-wrapper {
  text-align: center;
  float: left;
  margin-right: 90px;
}

.team-wrapper {
  text-align: center;
  float: right;
  width: 60%;
}

